# steelseeries-backlight

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  main.cpp  msi_keyboard.cpp  msi_keyboard.h  steelseeries-backlight.creator.user.b9bdf0d
